# blood-test-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/notebooks/: Data-Preparation.ipynb  Pytesseract.ipynb
frontend/: .eslintrc.json  .gitignore  jest.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/amplify/: team-provider-info.json
frontend/amplify/.config/: project-config.json
frontend/amplify/backend/: backend-config.json
frontend/amplify/backend/auth/triagef65cb7e5/: cli-inputs.json
frontend/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
frontend/cypress/e2e/: SeoMetadata.cy.ts
frontend/src/: aws-exports.js
frontend/src/components/account/: ForgotPasswordForm.tsx  LoginForm.tsx  PasswordStrengthChecker.tsx  RegisterForm.tsx  ResetPasswordForm.tsx
frontend/src/components/dashboard/: Sidebar.tsx
frontend/src/components/landing-site/: Banner.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  Highlight.tsx  NotFound.tsx  Pricing.tsx  Process.tsx
frontend/src/pages/: 404.tsx  _app.tsx  index.tsx
frontend/src/pages/account/: index.tsx  register.tsx  reset-password.tsx
frontend/src/pages/dashboard/: index.tsx
frontend/src/styles/: global.css
frontend/src/utils/: authFunctions.ts  configureAmplify.js  zodSchema.ts
notebooks/: Data-Preparation.ipynb  LabelStudio.ipynb
