[tool.poetry]
name = "blood-test-tracker"
version = "0.1.0"
description = ""
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
pandas = "^1.4.3"
scipy = "^1.9.0"
matplotlib = "^3.5.3"
Pillow = "^9.2.0"
opencv-python = "^4.6.0"
jupyter = "^1.0.0"
pytesseract = "^0.3.10"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
